# dilithium-git-signer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dilithium_git_signer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: cli.py  git_integration.py  signer.py
tests/: test_git.py  test_signer.py
